--- a/components/like/index.wxml
+++ b/components/like/index.wxml
@@ -1,5 +1,5 @@
 <!--components/like/index.wxml-->
 <view bind:tap="onLike" class="container">
-<image class="like" src="{{like ? '../image/like@dis.png' : '../image/like.png'}}" ></image>
-<text class="like-num">{{like?test:count}}</text>
+<image class="like" src="{{like ? likeImg: dislikeImg}}" ></image>
+<text class="like-num">{{like?count:count}}</text>
 </view>
