add promise ajax and ajax class

--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,4 +1,4 @@
 <!--pages/classic/classic.wxml-->
 <view class="container">
-	<x-like />
+  <x-like like="{{classic.like_status}}" count="{{classic.fav_nums}}" />
 </view>
