完成书架，开始详情页

--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -10,7 +10,7 @@
         <image class="head-img" src="/images/book/quality.png" />
         <view class="books-container">
             <block wx:key="id" wx:for="{{books}}">
-                <v-book book="{{item}}" />
+                <x-book book="{{item}}" />
             </block>
         </view>
     </view>
