--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -1,2 +1,19 @@
 <!--pages/book-detail/book-detail.wxml-->
-<text>pages/book-detail/book-detail.wxml</text>
+<view class="container">
+    <view class="head">
+        <image src="{{book.image}}"></image>
+        <text class='title'>{{book.title}}</text>
+        <text class='author'>{{book.author}}</text>
+    </view>
+    <view class="sub-container">
+        <text class="headline">短评</text>
+        <text class="shadow" wx:if="{{comments==false}}">还没有短评</text>
+        <view class="comment-container">
+            <block wx:for="{{util.limit(comments, 10)}}" wx:key="content">
+                <x-tag tag-class="{{tool.highlight(index)}}" text="{{item.content}}">
+                    <text class="num" slot="after">{{'+'+item.nums}}</text>
+                </x-tag>
+            </block>
+        </view>
+    </view>
+</view>
