--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -1,4 +1,5 @@
 <!--pages/book-detail/book-detail.wxml-->
+<wxs src='../../util/filter.wxs' module="util"></wxs>
 <view class="container">
     <view class="head">
         <image src="{{book.image}}"></image>
@@ -7,7 +8,7 @@
     </view>
     <view class="sub-container">
         <text class="headline">短评</text>
-        <text class="shadow" wx:if="{{comments==false}}">还没有短评</text>
+        <text class="shadow" wx:if="{{comments===false}}">还没有短评</text>
         <view class="comment-container">
             <block wx:for="{{util.limit(comments, 10)}}" wx:key="content">
                 <x-tag tag-class="{{tool.highlight(index)}}" text="{{item.content}}">
@@ -15,5 +16,9 @@
                 </x-tag>
             </block>
         </view>
+    </view>
+    <view class="sub-container">
+        <text class="headline">内容简介</text>
+        <text class="content">{{util.format(book.summary)}}</text>
     </view>
 </view>
