--- a/util/filter.wxs
+++ b/util/filter.wxs
@@ -8,6 +8,14 @@ var format = function (text) {
 
     return text.replace(reg,'\n&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;')
 }
+
+var limit = function(arr, length){
+    if (!arr){
+        return
+    }
+    return arr.slice(0, length)
+}
 module.exports = {
-    format:format
+    format:format,
+    limit:limit
 }
