--- a/components/search/index.wxml
+++ b/components/search/index.wxml
@@ -44,7 +44,7 @@
         </block>
     </view>
 
-    <!--    <x-loading class="loading-center" wx:if="{{loadingCenter}}"/>-->
-    <!--    <x-loading class="loading" wx:if="{{loading}}"/>-->
+        <x-loading class="loading-center" wx:if="{{loadingCenter}}"/>
+        <x-loading class="loading" wx:if="{{loading}}"/>
     <text wx:if="{{noneResult}}" class="empty-tip">没有搜索到书籍</text>
 </view>
